<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">ankit_s_application2</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <!--TODO ENTER YOUR APP ID BELOW-->
    <string name="facebook_app_id"/>
    <!--TODO ENTER YOUR APP ID BELOW (eg: fb0123456789)-->
    <string name="fb_login_protocol_scheme">fb</string>
    <!--TODO ENTER YOUR Client Token BELOW-->
    <string name="facebook_client_token"/>
<string name="lbl_man_shirt">Man Shirt</string>
<string name="lbl_your_email">Your Email</string>
<string name="msg_welcome_to_e_co">Welcome to E-com</string>
<string name="lbl_category">Category</string>
<string name="lbl_offer">Offer</string>
<string name="msg_don_t_have_an_a">Don\u2019t have an account? Register</string>
<string name="lbl_see_more">See More</string>
<string name="lbl_password_again">Password Again</string>
<string name="lbl_flash_sale">Flash Sale</string>
<string name="lbl_home">Home</string>
<string name="msg_fs_quilted_ma">FS - QUILTED MAXI CROS...</string>
<string name="lbl_register_form">Register form</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_299_43">$299,43</string>
<string name="lbl_sign_in">Sign In</string>
<string name="msg_already_registe">Already registered? Sign In</string>
<string name="lbl_52">52</string>
<string name="lbl_offer_screen">Offer Screen</string>
<string name="msg_have_an_account">Have an account? Sign In</string>
<string name="msg_sign_up_and_sta">Sign up and
starting workout</string>
<string name="lbl_sign_up">Sign Up</string>
<string name="lbl_splash_screen">Splash Screen</string>
<string name="msg_super_flash_sal">Super Flash Sale
50% Off</string>
<string name="msg_nike_air_max_27">Nike Air Max 270 React ENG</string>
<string name="msg_forgot_password">Forgot Password?</string>
<string name="lbl">:</string>
<string name="lbl_more_category">More Category</string>
<string name="lbl_register">Register</string>
<string name="msg_have_an_account2">Have an account?</string>
<string name="msg_man_work_equipm">Man Work Equipment</string>
<string name="lbl_woman_bag">Woman Bag</string>
<string name="lbl_mega_sale">Mega Sale</string>
<string name="msg_super_flash_sal2">Super Flash Sale</string>
<string name="msg_login_with_goog">Login with Google</string>
<string name="lbl_dashboard">Dashboard</string>
<string name="msg_fs_nike_air_m">FS - Nike Air Max 270 React...</string>
<string name="msg_glad_to_meet_y">Glad to meet 
you again!</string>
<string name="msg_let_s_get_start">Let\u2019s Get Started</string>
<string name="lbl_high_heels">High Heels</string>
<string name="msg_don_t_have_an_a2">Don\u2019t have an account?</string>
<string name="msg_create_an_new_a">Create an new account</string>
<string name="lbl_08">08</string>
<string name="msg_ms_nike_air_m">MS - Nike Air Max 270 React...</string>
<string name="lbl_sign_up_now">Sign Up Now</string>
<string name="lbl_search_product">Search Product</string>
<string name="lbl_login">Login</string>
<string name="lbl_or2">OR</string>
<string name="lbl_sign_in_now">Sign In Now</string>
<string name="msg_sign_in_to_cont">Sign in to continue</string>
<string name="lbl_cart">Cart</string>
<string name="lbl_your_name">Your Name</string>
<string name="msg_login_with_face">Login with facebook</string>
<string name="lbl_24_off">24% Off</string>
<string name="lbl_forgot_password">Forgot Password</string>
<string name="lbl_534_33">$534,33</string>
<string name="lbl_34">34</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="lbl_dress">Dress</string>
<string name="lbl_password">Password</string>
<string name="lbl_or">Or</string>
<string name="lbl_man_shoes">Man Shoes</string>
<string name="lbl_explore">Explore</string>
<string name="msg_by_signing_up_y">By signing up you agree to our Term of use and privacy notice</string>
<string name="lbl_remember_me">Remember me</string>
<string name="lbl_full_name">Full Name</string>
<string name="msg_already_registe2">Already registered?</string>
<string name="lbl_account">Account</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
</resources>
