<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signInVM" type="com.ankitsapplication.app.modules.signin.data.viewmodel.SignInVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearSignIn"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnarrowleft"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStyleblack_900">
            <ImageView android:id="@+id/imageArrowleft"
                android:layout_height="@dimen/_13pxh"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="@dimen/_6pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowleft"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
            <TextView android:id="@+id/txtTitle"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_25pxh"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_36pxv"
                android:layout_width="match_parent"
                android:text="@{signInVM.signInModel.txtTitle}"
                style="@style/txtRobotobold35" tools:text="@string/msg_glad_to_meet_y"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtGroupFour"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_46pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_20pxv"
                android:paddingStart="@dimen/_15pxh"
                android:paddingTop="@dimen/_21pxv"
                android:singleLine="true"
                android:text="@{signInVM.signInModel.txtGroupFour}"
                style="@style/txtSolidRounded" tools:text="@string/lbl_your_name"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtGroupThree"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_21pxv"
                android:paddingStart="@dimen/_14pxh"
                android:paddingTop="@dimen/_19pxv"
                android:singleLine="true"
                android:text="@{signInVM.signInModel.txtGroupThree}"
                style="@style/txtSolidRounded" tools:text="@string/lbl_your_email"/>
            <LinearLayout android:id="@+id/linearRowrememberme"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:buttonTint="@color/amber_300"
                    android:ellipsize="end"
                    android:fontFamily="@font/montserrat"
                    android:id="@+id/checkBoxRememberme"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.53"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:paddingBottom="@dimen/_1pxv"
                    android:paddingStart="@dimen/_5pxh"
                    android:paddingTop="@dimen/_2pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_remember_me"
                    android:textColor="@color/white_A700_87"
                    android:textFontWeight="500"
                    android:textSize="@dimen/_11pxh"
                    android:textStyle="bold" tools:text="@string/lbl_remember_me"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtForgotPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_125pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="0.47"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{signInVM.signInModel.txtForgotPassword}"
                    style="@style/txtMontserratmedium11" tools:text="@string/lbl_forgot_password"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSignInNow"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_62pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:paddingBottom="@dimen/_20pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_20pxv"
                android:singleLine="true"
                android:text="@string/lbl_sign_in_now"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_sign_in_now"/>
            <TextView android:ellipsize="end" android:id="@+id/txtOr"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{signInVM.signInModel.txtOr}"
                style="@style/txtRobotoblack14" tools:text="@string/lbl_or"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSignUpNow"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:paddingBottom="@dimen/_20pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_20pxv"
                android:singleLine="true"
                android:text="@string/lbl_sign_up_now"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_2" tools:text="@string/lbl_sign_up_now"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAlreadyregiste"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_22pxv"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_152pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{signInVM.signInModel.txtAlreadyregiste}"
                style="@style/txtRobotoregular12" tools:text="@string/msg_already_registe"/>
        </LinearLayout>
    </LinearLayout>
</layout>
