<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registerFormVM" type="com.ankitsapplication.app.modules.registerform.data.viewmodel.RegisterFormVM"/>
    </data>
    <LinearLayout android:id="@+id/linearRegisterform"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <View android:background="@color/gray_400"
            android:id="@+id/viewRectangle384"
            android:layout_gravity="start"
            android:layout_height="@dimen/_56pxv"
            android:layout_marginEnd="@dimen/_98pxh"
            android:layout_marginStart="@dimen/_98pxh"
            android:layout_marginTop="@dimen/_26pxv" android:layout_width="@dimen/_157pxh"/>
        <ImageButton
            android:background="@drawable/rectangle_bg_light_blue_a200_radius_16"
            android:id="@+id/btnVector40Stro"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_72pxh"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="@dimen/_72pxh"
            android:paddingHorizontal="@dimen/_20pxh"
            android:paddingVertical="@dimen/_20pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_vector40stro" tools:ignore="ContentDescription"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLetsGetStart"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.03" android:singleLine="true"
            android:text="@{registerFormVM.registerFormModel.txtLetsGetStart}"
            style="@style/txtPoppinsbold16" tools:text="@string/msg_let_s_get_start"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtCreateannewa"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.03" android:singleLine="true"
            android:text="@{registerFormVM.registerFormModel.txtCreateannewa}"
            style="@style/txtPoppinsregular12" tools:text="@string/msg_create_an_new_a"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_blue_50_radius_5"
            android:drawablePadding="@dimen/_12pxh"
            android:drawableStart="@drawable/img_user"
            android:ellipsize="end" android:hint="@string/lbl_full_name"
            android:id="@+id/etFullName" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.03"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@={registerFormVM.registerFormModel.etFullNameValue}"
            android:textColorHint="@color/bluegray_300"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_blue_50_radius_5"
            android:drawablePadding="@dimen/_12pxh"
            android:drawableStart="@drawable/img_mail"
            android:ellipsize="end"
            android:hint="@string/lbl_your_email"
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.03"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@={registerFormVM.registerFormModel.etEmailValue}"
            android:textColorHint="@color/bluegray_300"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_blue_50_radius_5"
            android:drawablePadding="@dimen/_12pxh"
            android:drawableStart="@drawable/img_lock"
            android:ellipsize="end" android:hint="@string/lbl_password"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.03"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@={registerFormVM.registerFormModel.etPasswordValue}"
            android:textColorHint="@color/bluegray_300"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_blue_50_radius_5"
            android:drawablePadding="@dimen/_12pxh"
            android:drawableStart="@drawable/img_lock"
            android:ellipsize="end"
            android:hint="@string/lbl_password_again"
            android:id="@+id/etPasswordAgain"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.03"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@={registerFormVM.registerFormModel.etPasswordAgainValue}"
            android:textColorHint="@color/bluegray_300"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSignUp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.03"
            android:paddingBottom="@dimen/_20pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:text="@string/lbl_sign_up"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_sign_up"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtConfirmation"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.03" android:singleLine="true"
            android:text="@{registerFormVM.registerFormModel.txtConfirmation}"
            style="@style/txtPoppinsbold12" tools:text="@string/msg_have_an_account"/>
    </LinearLayout>
</layout>
