<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="offerScreenRowModel" type="com.ankitsapplication.app.modules.offerscreen.data.model.OfferScreenRowModel"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearProduct"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
        <ImageView android:id="@+id/imageProducticon"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_133pxh"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="@dimen/_133pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_5pxh}"
            imageRes="@{@drawable/img_productimage_3}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_productimage_3"/>
        <TextView android:id="@+id/txtNikeAirMaxRe"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.03"
            android:text="@{offerScreenRowModel.txtNikeAirMaxRe}"
            style="@style/txtPoppinsbold12_1" tools:text="@string/msg_nike_air_max_27"/>
        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingBarRatingbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="wrap_content" android:numStars="5"
            android:progressBackgroundTint="@color/blue_50"
            android:progressTint="@color/yellow_700" android:rating="4" style="@style/Widget.AppCompat.RatingBar.Small"/>
        <TextView android:ellipsize="end" android:id="@+id/txtPrice"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.03" android:singleLine="true"
            android:text="@{offerScreenRowModel.txtPrice}"
            style="@style/txtPoppinsbold12_2" tools:text="@string/lbl_299_43"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearDiscounts"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtOldPrice"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.5" android:layout_width="0dp"
                android:letterSpacing="0.03" android:singleLine="true"
                android:text="@{offerScreenRowModel.txtOldPrice}"
                style="@style/txtPoppinsregular10" tools:text="@string/lbl_534_33"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtOfferOne"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_weight="0.5" android:layout_width="0dp"
                android:letterSpacing="0.03" android:singleLine="true"
                android:text="@{offerScreenRowModel.txtOfferOne}"
                style="@style/txtPoppinsbold10" tools:text="@string/lbl_24_off"/>
        </LinearLayout>
    </LinearLayout>
</layout>
