<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="imageSliderSliderofferModel" type="com.ankitsapplication.app.modules.dashboard.data.model.ImageSliderSliderofferModel"/>
    </data>
    <FrameLayout android:id="@+id/frameOfferBanner"
        android:layout_height="match_parent" android:layout_width="match_parent">
        <ImageView android:id="@+id/imagePromotionImage"
            android:layout_gravity="start"
            android:layout_height="@dimen/_206pxh"
            android:layout_width="match_parent"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_5pxh}"
            imageUrl="@{imageSliderSliderofferModel.imagePromotionImage}"
            placeHolder="@{@drawable/image_not_found}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_promotionimage"/>
        <LinearLayout android:id="@+id/linearColumnoffer"
            android:layout_gravity="bottom|start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_32pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_32pxv"
            android:layout_width="wrap_content" android:orientation="vertical">
            <TextView android:id="@+id/txtOffer"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:letterSpacing="0.03"
                android:text="@{imageSliderSliderofferModel.txtOffer}"
                style="@style/txtPoppinsbold24" tools:text="@string/msg_super_flash_sal"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearPromotionPriod"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_38pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtHours"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.31"
                    android:layout_width="0dp"
                    android:letterSpacing="0.03"
                    android:paddingBottom="@dimen/_12pxv"
                    android:paddingEnd="@dimen/_11pxh"
                    android:paddingStart="@dimen/_9pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:singleLine="true"
                    android:text="@{imageSliderSliderofferModel.txtHours}"
                    style="@style/txtSolidRounded_1" tools:text="@string/lbl_08"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_13pxv"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_weight="0.03"
                    android:layout_width="0dp"
                    android:letterSpacing="0.0"
                    android:singleLine="true"
                    android:text="@{imageSliderSliderofferModel.txtOne}"
                    style="@style/txtPoppinsbold14" tools:text="@string/lbl"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMinutes"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_weight="0.31"
                    android:layout_width="0dp"
                    android:letterSpacing="0.03"
                    android:paddingBottom="@dimen/_12pxv"
                    android:paddingEnd="@dimen/_11pxh"
                    android:paddingStart="@dimen/_9pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:singleLine="true"
                    android:text="@{imageSliderSliderofferModel.txtMinutes}"
                    style="@style/txtSolidRounded_1" tools:text="@string/lbl_34"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_13pxv"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_weight="0.03"
                    android:layout_width="0dp"
                    android:letterSpacing="0.0"
                    android:singleLine="true"
                    android:text="@{imageSliderSliderofferModel.txtTwo}"
                    style="@style/txtPoppinsbold14" tools:text="@string/lbl"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSecounds"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_weight="0.31"
                    android:layout_width="0dp"
                    android:letterSpacing="0.03"
                    android:paddingBottom="@dimen/_12pxv"
                    android:paddingEnd="@dimen/_10pxh"
                    android:paddingStart="@dimen/_11pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:singleLine="true"
                    android:text="@{imageSliderSliderofferModel.txtSecounds}"
                    style="@style/txtSolidRounded_1" tools:text="@string/lbl_52"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
